Refactor Persistence query stuff.